Project

General

Profile

Actions

Bug #10615

closed

SIGKILL is not supported by signal() of some versions of MSVCRT

Bug #10615: SIGKILL is not supported by signal() of some versions of MSVCRT

Added by usa (Usaku NAKAMURA) almost 12 years ago. Updated over 11 years ago.

Status:
Closed
Target version:
ruby -v:
-
[ruby-dev:48762]

Description

MSVCRTはSIGKILLをサポートしておらず(C標準外なので割と当たり前)、Rubyで自前サポートしているわけなのですが、にもかかわらずsignal()にはそのまんま渡しているため、一部のMSVCRT実装で問題が起きているようです。

Actions

Also available in: PDF Atom