* signal.c (ruby_signal): since SIGKILL is not supported by MSVCRT,   should be treated before calling signal(2).   [Bug #10615]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@48884 b2dd03c8-39d4-4d8f-98ff-823fe69b080e